# gantry

./: .coderabbit.yaml  .gitignore  CLAUDE.md  CLAUDE.original.md  README.md  conftest.py  pyproject.toml
.claude/: settings.json
.claude/skills/implement/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: claude.yml
charts/agent/: values.yaml
charts/agent/templates/: deployment.yaml  hpa.yaml  ingress.yaml
docs/superpowers/plans/: 2026-04-18-panel-navigation.md  2026-04-19-keybindings-bar.md  2026-04-19-right-panel-detail-viewer.md  2026-04-19-vim-style-search.md  2026-04-21-k8s-resource-sidebar.md  2026-04-25-yaml-default-spec-view.md  2026-04-26-yaml-syntax-highlighting.md  2026-05-06-example-chart.md
docs/superpowers/specs/: 2026-04-18-panel-navigation-design.md  2026-04-19-keybindings-bar-design.md  (+8 more)
example-chart/: Chart.yaml  values.yaml
example-chart/templates/: _helpers.tpl  backend-deployment.yaml  backend-hpa.yaml  backend-service.yaml  configmap.yaml  cronjob.yaml  db-service.yaml  db-statefulset.yaml  frontend-deployment.yaml  frontend-hpa.yaml  frontend-service.yaml  ingress.yaml  job.yaml  networkpolicy.yaml  role.yaml  rolebinding.yaml  secret.yaml  serviceaccount.yaml
plans/: debug-logging-setup.md
scripts/: screenshot.sh  take_screenshot.py
src/gantry/: __init__.py  __main__.py  app.py  helm.py  highlight.py  k8s.py  screens.py  state.py  widgets.py
tests/: test_app.py  test_helm.py  test_k8s.py  test_widgets.py
(+6 files in other folders)
