[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gantry"
version = "0.1.0"
description = "TUI for Kubernetes cluster management and Helm orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.40.0",
    "kubernetes>=28.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gantry"]
